# chimera

./: .clang-format  .clang-tidy  .clang_complete  .cmakelintrc  .dockerignore  .gitignore  .gitmodules  .gitpod.yml  .hadolint.yaml  .mailmap  .python-version  .travis.yml  .yamllint.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile.alpine  Dockerfile.python  LICENSE  README.md  SECURITY.md  action.yml  build.fish  build.sh  cflags.fish  cflags.sh  cmake.alpine.sh  cmake.fish  compile_commands.fish  compile_commands.sh  requirements.core.txt  requirements.txt  setup.cfg
.config/: ansible-lint.yml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/ccache/: ccache.conf
.github/codeql/: codeql-config.yml
.github/workflows/: actions-branch-delete.yml  actions-pr-close.yml  actions.yml  ansible-lint.yml  black.yml  clang-format.yml  clang-tidy.yml  cmake.yml  cmakelint.yml  codecov.yml  codeql.yml  corpus-merge.yml  docker.yml  isort.yml  modules.yml  mypy.yml  pylama.yml  python.yml  rebase.yml  release.yml  requirements-txt.yml  rust-format.yml  scan-build.yml  shellcheck.yml  trufflehog.yml  utf8-generate.yml  yamllint.yml
cmake/: bootstrap_pip.cmake
docker/: setup.sh
include/: chimera.h
oxidation/: .gitignore
oxidation/number/: Cargo.toml  build.rs  cbindgen.toml
oxidation/number/benches/: chimera.rs
oxidation/number/src/: base.rs  complex.rs  imag.rs  lib.rs  natural.rs  negative.rs  number.rs  rational.rs  traits.rs  utils.rs
patches/: Catch  PEGTL
process/: 1_TOC.md  2_Code_Of_Conduct.md  3_Support.md  4_Github.md  5_Build_Process.md  README.md
source/: main.cpp
stdlib/: __pypy__.py  _builtins.py  _heapq.py  _imp.py  _operator.py  _thread.py  _warnings.py  _weakref.py  itertools.py
stdlib/builtins/: builtins.cpp  builtins.hpp
stdlib/importlib/: importlib.cpp  importlib.hpp
stdlib/marshal/: marshal.cpp  marshal.hpp
stdlib/sys/: sys.cpp  sys.hpp
tools/: .gitignore  CMakeSettings.json  Dockerfile.j2  action.py  asyncio_as_completed.py  asyncio_cmd.py  asyncio_set_event_loop_policy.py  before.py  before.sh  black.sh  bnf2abnf.cpp  boot.py  boot.sh  boot.yml  build.py  build.sh  builtins.cpp  builtins.sh  cflags.sh  chimera_path.py  chimera_utils.py  clang-fix.sh  clang-format.sh  clang-tidy.sh  clang_fix.py  clang_format.py  clang_tidy.py  cmake.py  cmake.sh  cmake_codecov.py  cmake_ninja.py  codecov.py  compile_commands.py  compile_commands.sh  corpus.py  corpus.sh  corpus_ascii.py  corpus_freeze.py  corpus_gather.py  corpus_merge.py  (+64 more)
tools/docker/: Dockerfile
tools/modules/: builtins.cpp  builtins.sh  gen_builtins.py  gen_importlib.py  importlib.cpp  importlib.sh  modules.cpp  modules.hpp
unit_tests/: .clang-tidy
unit_tests/fuzz/: .clang-tidy  .gitignore  cases.cpp  cases.hpp  cases.json  chimera.txt  fuzztest.cpp  target-ellipsis.cpp  target-expression.cpp  target-false.cpp  target-interactive.cpp  target-keywords.cpp  target-module.cpp  target-name.cpp  target-none.cpp  target-num.cpp  target-number.cpp  target-statement.cpp  target-string.cpp  target-true.cpp  target-vm-expression.cpp  target-vm-interact.cpp  target-vm.cpp  target.cpp  target2.cpp
unit_tests/fuzz/corpus/: 0000193b3  000019af8  000021bba  000022414  00002d3e4  00002db8e  00002df6f  0000307ed  000037d0d  0000397f7  000050b5c  000060601  0000641e4  000067d27  000078ade  00008a67f  00009e370  00009e9cc  0000a12b1  0000bc747  0000cdc76  0000d8397  0000d87df  0000df5e6  0000e065f  0000e6eac  0000f600b  0000fd0e8  000106e57  00010c514  0001149b2  00011e634  00011eed1  00011ff9f  00012f041  000150989  000153f32  00017da98  00018326b  000189546  (+19115 more)
unit_tests/fuzz/corpus/00/: 001b5a0b0a6d  0036d6520599  00498cd7d709  0098cf83dd2a  00eee1e7fd7a  01137a01072e  013c84a4f79f  0290adbd881f  0300230ffb88  03331319fa33  03f0a2ace145  042dda9fe58c  056cf0b2fb6c  0613d9a0a6be  06331f0aeef9  07238a4f4003  07f87612268b  0890cfd0e5c9  0b44a5bb6949  0b6375057eab  0c9ee907566f  0cb6ce53cf8c  0cde187d2a40  0d1c3947f5a8  0dbac0469f5c  0e0e019b685a  0e853398768c  0e9215a8c307  0ef81bf66663  0fcfd231171e  10f1d405afeb  1165e46b4e55  119f4f4fa70c  11e69e832703  12881588550e  12bd10f20557  12d17aeadd7d  12d19de84528  131077a10585  143366b053d6  (+441 more)
unit_tests/fuzz/corpus/01/: 00c3aa10705e  02cb92148eec  032ba64abc6d  03c91926a24b  03e920eb6ada  0500e3adb7d5  050dee3137be  0539d5e100eb  053ad0777e1a  05a2e2e292aa  05b85953921b  06c16a004908  06ed1a566aec  084eb6c91c2a  088690ee0a33  08e5f80a0249  0a01a71ee026  0a694e656a4b  0ac7c395ae07  0b10241aba62  0be7e72984f0  0c0b2e295032  0e54fb2cbda9  0efeabae73a1  0f33d7743938  0f8303d0586e  110415b52069  118b6a83b8bb  11bcb47daaad  121660d0ebbc  12466c6e4734  124a7ea1f8ab  12681ac9e7d1  1300483cc0e1  130ced08ae8c  132352c597ce  132b30438f1e  15254276d90e  15a36c90db81  1865de2880be  (+369 more)
unit_tests/fuzz/corpus/02/: 009ed6b05570  01b608f63030  026e63fd0dcd  0290581b54ca  02b3464f7d50  033d4dda6a38  0370490c008f  0391fbf4e11a  039d7a64e83d  03eafd82ceb5  04d7779baeb9  053f7079e38c  055dd2d33a48  062ad855ebc1  07d32c41b40f  0bc2af77a3b6  0bf4592cc7e4  0c9e158f59b6  0cd117df45ce  0d017a1739cd  0d71eccfbc8d  0d8396410723  0e044f33789b  0ebdd4efba09  0ece0eac3d57  1024ca55450c  105a363a42e3  10b1e0e184b8  (+411 more)
unit_tests/fuzz/crashes/: 00002981  000b5803  000e6d6a0  00323615  003521dc  0046813aef4d  0046eb17  004a5a54  0056ff7c  005e5fd98  007a4456  008b688a  0090b9a9  0091fe58  00b75381  00c277def  00d4f10b  00d9b1fb  01025566  010e8d50  011a16bc  0129389e  012ab4b7  012c8b50  01303eec  013090ef957e  014a76af  015477c6  015a9470  01638832  0163b562  0172e579  0188964b  018eb502  019648fc9  019f3df62  01a2bc06  01a43808  01a7e572  01aa208d  (+5841 more)
unit_tests/fuzz/dictionaries/: ellipsis.dict  false.dict  keywords.dict  none.dict  true.dict  vm.dict
unit_tests/grammar/: expression.cpp  grammar.cpp  identifier.cpp  number.cpp  number_parse.cpp  statement.cpp  test_parse.hpp
unit_tests/number/: number.cpp
unit_tests/virtual_machine/: .gitignore  fuzz-json.cpp  fuzz.cpp  fuzz.hpp  parse.cpp  trace.cpp  virtual_machine.cpp
(+147223 files in other folders)
